# elka_firmware

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  Makefile  Makefile.bak  README.md  TODO.txt  tags  tmp.txt  useful_commands.md
Debug/: elka_stm32f4_makefile.map  makefile  sources.mk
Debug/src/: subdir.mk
Debug/src/FreeRTOS/: subdir.mk
Debug/src/FreeRTOS/GCC/ARM_CM4F/: subdir.mk
Debug/src/FreeRTOS/MemMang/: subdir.mk
Debug/src/STM32F4xx_StdPeriph_Driver/: subdir.mk
Debug/src/drivers/: subdir.mk
Debug/src/elka_hal/: subdir.mk
Debug/src/modules/: subdir.mk
Debug/src/utils/: subdir.mk
Debug/system/src/cmsis/: subdir.mk
Debug/system/src/cortexm/: subdir.mk
Debug/system/src/diag/: subdir.mk
Debug/system/src/newlib/: subdir.mk
Debug/system/src/stm32f4-hal/: subdir.mk
build_elka/: CMakeCache.txt  Makefile  cmake_install.cmake  elka  elka.map
build_elka/src/: Makefile  cmake_install.cmake
build_elka/src/FreeRTOS/: Makefile  cmake_install.cmake
build_elka/src/STM32F4xx_StdPeriph_Driver/: Makefile  cmake_install.cmake
build_elka/src/drivers/: Makefile  cmake_install.cmake
build_elka/src/elka_hal/: Makefile  cmake_install.cmake
build_elka/src/modules/: Makefile  cmake_install.cmake
build_elka/src/utils/: Makefile  cmake_install.cmake
cmake/common/: elka_base.cmake
debug/: stlink-v2-1.cfg  stlink-v2.cfg  stm32f4x.cfg
inc/: elka_defines.h  elka_log.h  hw_config.h  serial_tasks.h
inc/Device/STM32F4xx/: stm32f4xx.h
inc/FreeRTOS/: FreeRTOSConfig.h  portable.h
inc/FreeRTOS/GCC/ARM_CM4F/: portmacro.h
inc/STM32F4xx_StdPeriph_Driver/: stm32f4xx_conf.h
inc/drivers/: adc.h  i2croutines.h  nrf24l01.h  px4flow.h
inc/elka_hal/: imu.h
inc/modules/: stabilizer.h
inc/nvicconf/: nvicconf.h
inc/utils/: cfassert.h  stm32f4_discovery.h
ldscripts/: sections.ld
msg/: CMakeLists.txt
msg/templates/uorb/: msg.cpp.template
src/: CMakeLists.txt  Makefile  _write.cpp  cmake_install.cmake  debug.c  debug.cpp  dummy.c  hw_config.cpp  main.c  main.cpp  serial_tasks.c  test.c
src/FreeRTOS/: CMakeLists.txt  Makefile  cmake_install.cmake
src/STM32F4xx_StdPeriph_Driver/: CMakeLists.txt  Makefile  cmake_install.cmake  stm32f4xx_it.c  system_stm32f4xx.c
src/drivers/: CMakeLists.txt  Makefile  adc.c  exti.c  i2cdev.c  i2croutines.c  motors.c  nvic.c  px4flow.c
src/elka_hal/: CMakeLists.txt  Makefile  cmake_install.cmake  imu.c
src/modules/: CMakeLists.txt  Makefile  sensfusion6.c  stabilizer.c
src/tests/: CMakeLists.txt  test_i2c.c
src/utils/: CMakeLists.txt  Makefile  cfassert.c
toolchain/: Toolchain-arm-none-eabi.cmake  Toolchain-arm-none-eabi.cmake.bak
tools/: bootstrap.sh
